--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Nunito', sans-serif;
+  scroll-behavior: smooth;
 }
 
 main {
@@ -26,4 +27,32 @@ footer {
 
 footer p {
   padding-right: 5%;
+}
+
+ul {
+  font-size: 20px;
+  list-style: none;
+  text-align: right;
+}
+
+li {
+  padding: 5px;
+}
+
+.selected, #content h1 span {
+  color: #D8AEC4;
+}
+
+#menu {
+  padding-right: 5%;
+}
+
+#content {
+  padding-left: 5%;
+}
+
+#content h1 {
+  text-align: right;
+  font-size: 40px;
+  font-weight: 350;
 }
