--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Nunito', sans-serif;
-  scroll-behavior: smooth;
+  color: #524E4F;
 }
 
 main {
@@ -40,16 +40,16 @@ li {
 }
 
 li:hover {
-  text-decoration: underline;
+  cursor: pointer;
 }
 
 a {
-  color: #000000;
+  color: #581845;
   text-decoration: none;
 }
 
-.selected, #content h1 span {
-  color: #D8AEC4;
+.selected {
+  color: #7D7375;
 }
 
 #menu {
@@ -60,8 +60,46 @@ a {
   padding-left: 5%;
 }
 
-#content h1 {
+#content h1, #content h2 {
   text-align: right;
-  font-size: 40px;
   font-weight: 350;
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+
+#content h1 {
+  font-size: 40px;
+}
+
+#content h2 {
+  padding-top: 5%;
+  font-size: 30px;
+  color: #7D7375;
+}
+
+.underline {
+  cursor: pointer;
+  border-bottom: 1px solid currentColor;
+  display: inline-block;
+  line-height: 1;
+  text-shadow:
+    2px 2px white,
+    2px -2px white,
+    -2px 2px white,
+    -2px -2px white;
+}
+
+.underline:hover {
+  line-height: .8;
+  color: #524E4F;
+}
+
+.underline, .underline:hover {
+  transition-property: line-height;
+  transition-duration: 0.2s;
+  transition-timing-function: ease-in-out;
+}
+
+.hidden {
+  display: none;
 }
