--- a/index.css
+++ b/index.css
@@ -44,8 +44,8 @@ li:hover {
 }
 
 a {
-  color: #581845;
   text-decoration: none;
+  color: #7D7375;
 }
 
 .selected {
@@ -60,24 +60,32 @@ a {
   padding-left: 5%;
 }
 
-#content h1, #content h2 {
+#home h1, #home h2, #home h3 {
   text-align: right;
   font-weight: 350;
   margin-block-start: 0;
   margin-block-end: 0;
 }
 
-#content h1 {
+#home h1 {
   font-size: 40px;
 }
 
-#content h2 {
-  padding-top: 5%;
+#home h2 {
   font-size: 30px;
-  color: #7D7375;
+}
+
+#home h3 {
+  font-size: 20px;
+  line-height: 1.5em;
+}
+
+#home h2, #home h3 {
+  padding-top: 5%;
 }
 
 .underline {
+  color: #7D7375;
   cursor: pointer;
   border-bottom: 1px solid currentColor;
   display: inline-block;
