--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   color: #524E4F;
 }
 
@@ -53,6 +53,7 @@ a {
 }
 
 #menu {
+  padding-top: 10%;
   padding-right: 5%;
 }
 
@@ -60,8 +61,16 @@ a {
   padding-left: 5%;
 }
 
-#home h1, #home h2, #home h3 {
+#home {
   text-align: right;
+}
+
+#home img {
+  width: 10%;
+  padding-bottom: 5%;
+}
+
+#home h1, #home h2, #home h3 {
   font-weight: 350;
   margin-block-start: 0;
   margin-block-end: 0;
@@ -89,7 +98,7 @@ a {
   cursor: pointer;
   border-bottom: 1px solid currentColor;
   display: inline-block;
-  line-height: 1;
+  line-height: 1.3;
   text-shadow:
     2px 2px white,
     2px -2px white,
@@ -98,13 +107,12 @@ a {
 }
 
 .underline:hover {
-  line-height: .8;
   color: #524E4F;
 }
 
 .underline, .underline:hover {
-  transition-property: line-height;
-  transition-duration: 0.2s;
+  transition-property: color;
+  transition-duration: .3s;
   transition-timing-function: ease-in-out;
 }
 
