--- a/index.css
+++ b/index.css
@@ -5,24 +5,33 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'PT Sans', sans-serif;
   color: #524E4F;
+  background-color: #f7f5f5;
+}
+
+header {
+  width: 100vw;
+  height: 80px;
+}
+
+nav {
+  text-align: center;
+  font-variant: small-caps;
+  padding: 20px;
+  word-spacing: 20px;
 }
 
 main {
   position: absolute;
-  width: 800px;
-  top: 30%;
-  left: 50%;
-  transform: translate(-50%, -30%);
-  display: flex;
+  width: 100vw;
 }
 
 footer {
   position: fixed;
   bottom: 1%;
   width: 100%;
-  text-align: right;
+  text-align: center;
 }
 
 footer p {
@@ -45,23 +54,17 @@ li:hover {
 
 a {
   text-decoration: none;
-  color: #7D7375;
+  color: #b2b2b2;
 }
 
 .selected {
   color: #7D7375;
 }
 
-#menu {
-  padding-top: 10%;
-  padding-right: 5%;
-}
-
-#content {
-  padding-left: 5%;
-}
-
 #home {
+  margin: 0 auto;
+  margin-top: 5%;
+  width: 640px;
   text-align: right;
 }
 
@@ -81,29 +84,27 @@ a {
 }
 
 #home h2 {
-  font-size: 30px;
+  font-size: 25px;
+  padding-top: 1.5%;
 }
 
 #home h3 {
   font-size: 20px;
   line-height: 1.5em;
-}
-
-#home h2, #home h3 {
   padding-top: 5%;
 }
 
+#projects-container {
+  display: flex;
+  align-content: center;
+  width: 100vw;
+}
+
 .underline {
-  color: #7D7375;
   cursor: pointer;
   border-bottom: 1px solid currentColor;
   display: inline-block;
   line-height: 1.3;
-  text-shadow:
-    2px 2px white,
-    2px -2px white,
-    -2px 2px white,
-    -2px -2px white;
 }
 
 .underline:hover {
