--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'PT Sans', sans-serif;
-  color: #524E4F;
+  color: #707070;
   background-color: #f7f5f5;
 }
 
@@ -32,6 +32,8 @@ footer {
   bottom: 1%;
   width: 100%;
   text-align: center;
+  font-variant-caps: all-small-caps;
+  color: #b2b2b2;
 }
 
 footer p {
@@ -57,23 +59,22 @@ a {
   color: #b2b2b2;
 }
 
-.selected {
-  color: #7D7375;
+strong, .selected {
+  color: black;
+}
+
+.hr {
+  border-bottom: 1px solid #707070;
+  opacity: 15%;
 }
 
 #home {
-  margin: 0 auto;
-  margin-top: 5%;
+  margin: 5% auto;
   width: 640px;
   text-align: right;
 }
 
-#home img {
-  width: 10%;
-  padding-bottom: 5%;
-}
-
-#home h1, #home h2, #home h3 {
+#home h1, #home h2 {
   font-weight: 350;
   margin-block-start: 0;
   margin-block-end: 0;
@@ -85,19 +86,36 @@ a {
 
 #home h2 {
   font-size: 25px;
-  padding-top: 1.5%;
-}
-
-#home h3 {
-  font-size: 20px;
-  line-height: 1.5em;
   padding-top: 5%;
 }
 
-#projects-container {
+#home-br {
+  margin: 5% auto;
+  width: 1440px;
   display: flex;
-  align-content: center;
-  width: 100vw;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+#home-br > .hr {
+  width: 480px;
+  margin: 0 auto;
+}
+
+#home-br h3 {
+  letter-spacing: 3px;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-weight: 100;
+  font-variant-caps: all-small-caps;
+  color: #b2b2b2;
+}
+
+#projects-container {
+  width: 80%;
+  display: flex;
+  justify-content: center;
 }
 
 .underline {
