--- a/about.css
+++ b/about.css
@@ -3,11 +3,13 @@
 */
 
 #abt-container {
+  margin: 0 auto;
   margin-top: 10vh;
-  width: 80vw;
+  width: 60vw;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-evenly;
+  align-content: center;
 }
 
 #abt-container img {
@@ -19,4 +21,13 @@
   image-rendering: -webkit-optimize-contrast; /* Webkit (non-standard naming) */
   image-rendering: crisp-edges;
   -ms-interpolation-mode: nearest-neighbor; /* IE (non-standard property) */
+}
+
+#abt-container section {
+  width: 50%;
+  padding: 1em;
+}
+
+#abt-container section h2 {
+  font-size: 30px;
 }
