--- a/index.css
+++ b/index.css
@@ -30,10 +30,11 @@ main {
 
 footer {
   position: fixed;
-  bottom: 0;
+  bottom: 1em;
   width: 100%;
   text-align: center;
   font-variant-caps: all-small-caps;
+  letter-spacing: 3px;
   color: #b2b2b2;
 }
 
