--- a/about.css
+++ b/about.css
@@ -14,6 +14,7 @@
 
 #abt-container img {
   width: 25%;
+  height: 100%;
   border-radius: 10%;
   filter: drop-shadow(5px 5px 15px rgba(0, 0, 0, 0.3));
   image-rendering: -moz-crisp-edges; /* Firefox */
