--- a/index.css
+++ b/index.css
@@ -32,22 +32,27 @@ footer {
   position: fixed;
   bottom: 1em;
   width: 100%;
-  text-align: center;
   font-variant-caps: all-small-caps;
   letter-spacing: 3px;
   color: #b2b2b2;
-}
-
-footer p {
-  padding-right: 2%;
+  text-align: center;
 }
 
 a {
   text-decoration: none;
+}
+
+header a {
   color: #b2b2b2;
 }
 
-strong, .selected {
+header a, header a:hover {
+  transition-property: color;
+  transition-duration: .3s;
+  transition-timing-function: ease-in-out;
+}
+
+a:hover, strong, .selected {
   color: black;
 }
 
@@ -83,12 +88,12 @@ h1, h2, h3 {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
+  justify-content: center;
+  flex-wrap: nowrap;
 }
 
 .break > .hr {
-  width: 25vw;
+  width: 30%;
   margin: 0 auto;
 }
 
@@ -98,6 +103,7 @@ h1, h2, h3 {
   padding-right: 10px;
   font-weight: 100;
   font-variant-caps: all-small-caps;
+  text-align: center;
   color: #b2b2b2;
 }
 
@@ -107,22 +113,24 @@ h1, h2, h3 {
   width: 80vw;
   display: flex;
   justify-content: center;
+  align-content: center;
   flex-wrap: wrap;
 }
 
 .project-card {
-  margin: 5vw;
-  margin-bottom: 0;
   margin-right: 1vw;
-  width: 30vw;
-  box-shadow: 2px -12px 40px rgba(0, 0, 0, 0.03);
+  box-shadow: -12px -12px 40px rgba(0, 0, 0, 0.03);
+  margin: 5vw;
+  width: 420px;
+  height: 445px;
+  margin-bottom: 0;
 }
 
 .project {
   padding: 3em;
-  opacity: 100%;
   text-align: center;
   cursor: pointer;
+  color: #707070;
 }
 
 .project:hover {
@@ -153,6 +161,7 @@ h1, h2, h3 {
 .container {
   width: 100%;
   display: flex;
+  justify-content: center;
   flex-direction: row;
   align-items: center;
 }
@@ -172,42 +181,6 @@ h1, h2, h3 {
   image-rendering: -webkit-optimize-contrast; /* Webkit (non-standard naming) */
   image-rendering: crisp-edges;
   -ms-interpolation-mode: nearest-neighbor; /* IE (non-standard property) */
-}
-
-#abt-me {
-  padding: 5em;
-  display: flex;
-  justify-content: space-evenly;
-  align-content: center;
-  width: 80vw;
-  margin: 0 auto;
-  margin-bottom: 10vh;
-}
-
-#abt-me img {
-  border-radius: 50%;
-  width: 15%;
-}
-
-#abt-me p {
-  width: 30%;
-}
-
-.underline {
-  cursor: pointer;
-  border-bottom: 1px solid currentColor;
-  display: inline-block;
-  line-height: 1.3;
-}
-
-.underline:hover {
-  color: #524E4F;
-}
-
-.underline, .underline:hover {
-  transition-property: color;
-  transition-duration: .3s;
-  transition-timing-function: ease-in-out;
 }
 
 .hidden {
