--- a/index.css
+++ b/index.css
@@ -187,15 +187,13 @@ h1, h2, h3 {
 }
 
 ::-webkit-scrollbar {
-  width: 6px;
-  background-color: #F5F5F5;
+  width: 16px;
+  background-color: initial;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #707070;
-}
-
-::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-  background-color: #F5F5F5;
+  background-color: rgb(158, 130, 214, .3);
+  border-radius: 50px;
+  border: 4px solid transparent;
+  background-clip: content-box;
 }
