--- a/about.css
+++ b/about.css
@@ -4,17 +4,17 @@
 
 #abt-container {
   margin: 0 auto;
-  margin-top: 10vh;
+  margin-top: 12vh;
+  margin-bottom: 38vh;
   width: 60vw;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  align-content: center;
+  align-items: center;
 }
 
 #abt-container img {
   width: 25%;
-  height: 100%;
   border-radius: 10%;
   filter: drop-shadow(5px 5px 15px rgba(0, 0, 0, 0.3));
   image-rendering: -moz-crisp-edges; /* Firefox */
